@@ -171,15 +171,5 @@ They are not supported by esxDOS."
 
 -tecla F para activar/desactivar modo prism zxuno
 
--cpc stereo
-
-Mono and Stereo Output
-When using the CPC's external stereo jack, 
-channel A is output to the right, channel C is output left, 
-and channel B is output to both left and right,   (CBA)
-in that case channel B is output through a bigger resistor to prevent that this channel appears loader than the others.
-
-Otherwise (when using the built-in speaker), all three channels are mixed at the same intensity. This signal appears to be also sent to the Tape output line also, so a connected Data Recorder could be used to record CPC music also.
-
 
 -poder redefinir tecla fire joystick (inicio no es muy comodo)
